src/objects/depotMapNbdNd__c.object
<CustomObject>
    <description>This object stores mappings between country / state combinations and NBD/Next Day depots.</description>
    <fields>
        <fullName>depotMapNbdNdCountry__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Darussalam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>depotMapNbdNdKey__c</fullName>
        <label>Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>depotMapNbdNdState__c</fullName>
        <label>State</label>
        <picklist>
            <controllingField>depotMapNbdNdCountry__c</controllingField>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isle of Man</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>depotMapNbdNd_NbdDepot__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>NBD Depot</label>
        <referenceTo>depot__c</referenceTo>
        <relationshipLabel>Depot Maps: NBD Depots</relationshipLabel>
        <relationshipName>depotMapNbdNd_NbdDepot</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>depotMapNbdNd_NdDepot__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Next Day Depot</label>
        <referenceTo>depot__c</referenceTo>
        <relationshipLabel>Depot Maps: Next Day Depots</relationshipLabel>
        <relationshipName>depotMapNbdNd_NdDepot</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Depot Map: NBD/ND</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>depotMapNbdNdCountry__c</columns>
        <columns>depotMapNbdNdState__c</columns>
        <columns>depotMapNbdNd_NbdDepot__c</columns>
        <columns>depotMapNbdNd_NdDepot__c</columns>
        <columns>depotMapNbdNdKey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Depot Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Depot Maps: NBD/ND</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>